respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Scheduler_Shipment_Services_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Body_mail__c</fullName>
        <label>Body mail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CCO_email__c</fullName>
        <label>CCO email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC_email__c</fullName>
        <label>CC email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Emails_Sent__c</fullName>
        <label>Contact Emails Sent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Job_Id__c</fullName>
        <label>Cron Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historical_Time__c</fullName>
        <label>Historical Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_mail__c</fullName>
        <label>Subject mail</label>
        <length>78</length>
        <type>Text</type>
    </fields>
    <label>Scheduler Shipment Service Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduler Shipment Services Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduler Shipment Services Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>